@@ -494,6 +494,7 @@ MARK_VISIBLE (gcry_pk_map_name)
 MARK_VISIBLE (gcry_pk_sign)
 MARK_VISIBLE (gcry_pk_testkey)
 MARK_VISIBLE (gcry_pk_verify)
+MARK_VISIBLEX(gcry_pubkey_get_sexp)
 
 MARK_VISIBLE (gcry_kdf_derive)
 
