@@ -2,7 +2,8 @@ Noteworthy changes in version 1.6.0 (unreleased)
 ------------------------------------------------
 
  * Removed the long deprecated gcry_ac interface.  Thus Libgcrypt is
-   not anymore ABI compatible too previous versions.
+   not anymore ABI compatible to previous versions if they used the ac
+   interface.
 
  * Removed the module register subsystem.
 
@@ -61,6 +62,7 @@ Noteworthy changes in version 1.6.0 (unreleased)
  GCRYMPI_FLAG_CONST              NEW.
  GCRYPT_VERSION_NUMBER           NEW.
  GCRY_KDF_SCRYPT                 NEW.
+ gcry_pubkey_get_sexp            NEW.
 
 
 Noteworthy changes in version 1.5.0 (2011-06-29)
